--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,10 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/images/icon512.png",
+      "src": "images/icon512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
 
