--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "RoBOX",
   "short_name": "RoBOX",
-  "start_url": "https://webte1.fei.stuba.sk/~xmarosi/final/",
+  "start_url": "https://webte1.fei.stuba.sk/~xcsoka/final/",
   "display": "standalone",
   "background_color": "#e4dcd1",
   "theme_color": "#e4dcd1",
